--- a/Final_Tutorial.ipynb
+++ b/Final_Tutorial.ipynb
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These ext few cells will all focus on the creation of a machine learning algorithm to give us the confidence on if a stock is a good buy."
+    "These next few cells will all focus on the creation of a machine learning algorithm to give us the confidence on if a stock is a good buy."
    ]
   },
   {
